--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/generator": "^7.24.4",
     "@google-cloud/storage": "^7.9.0",
+    "@google-cloud/translate": "^8.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
+    "fs": "^0.0.1-security",
+    "googleapis": "^134.0.0",
+    "http2": "^3.3.7",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-google-storage": "^1.3.0",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.0.379",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^4.0.3",
     "stream": "^0.0.2",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
@@ -48,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.24.3"
   }
