--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "child_process": "^1.0.2",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
     "fs": "^0.0.1-security",
